--- a/.NET_core/eBookManager/eBookManager/Properties/Resources.resx
+++ b/.NET_core/eBookManager/eBookManager/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="add_ebook_to_storage_space" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\add_ebook_to_storage_space.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add-classification" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\add-classification.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="delete-ebook-file1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\delete-ebook-file.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -145,7 +148,7 @@
   <data name="add_new_storage_space" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\add_new_storage_space.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="add-classification" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\add-classification.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="delete-classification" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\delete-classification.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
